8282569: [lworld] C2 asserts with "re-allocation should be removed by Ideal transformation"